centos_kubespray/configs/spinnaker/ingress-spinnaker.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spinnaker
  namespace: spinnaker
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: spin-deck.192.168.137.172.xip.io
    http:
      paths:
      - backend:
          serviceName: spin-deck
          servicePort: 9000
        path: /
  - host: spin-gate.192.168.137.172.xip.io
    http:
      paths:
      - backend:
          serviceName: spin-gate
          servicePort: 8084
        path: /
